# King-God-Castle-Toolkit

./: .SRCINFO  .editorconfig  .env  .gitattributes  .gitignore  .prettierignore  .prettierrc  LICENSE  PKGBUILD  README.md  WINDOWS_FIX.md  biome.json  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml  tsconfig.json  vitest.config.mts  watch.json
.claude/: settings.local.json
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: build.yml  dependabot-automerge.yml
csharp/Editor/: ProjectAnalyzer.cs  SpriteExporter.cs
public/locales/: en.json  vi.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/binaries/: apkeep
src-tauri/binaries/asset-ripper-linux-x64/: AssetRipper.Assets.deps.json  AssetRipper.Export.Modules.Audio.deps.json  AssetRipper.Export.Modules.Models.deps.json  AssetRipper.Export.Modules.Shaders.deps.json  AssetRipper.Export.Modules.Textures.deps.json  AssetRipper.Export.PrimaryContent.deps.json  AssetRipper.Export.UnityProjects.deps.json  AssetRipper.Export.deps.json  AssetRipper.GUI.Free  AssetRipper.GUI.Free.deps.json  AssetRipper.GUI.Free.runtimeconfig.json  AssetRipper.GUI.Free.staticwebassets.endpoints.json  AssetRipper.GUI.Licensing.SourceGenerator.deps.json  AssetRipper.GUI.Licensing.deps.json  AssetRipper.GUI.Localizations.SourceGenerator.deps.json  AssetRipper.GUI.Localizations.deps.json  AssetRipper.GUI.Web.deps.json  AssetRipper.IO.Files.deps.json  AssetRipper.Import.deps.json  AssetRipper.Numerics.deps.json  AssetRipper.Processing.SourceGenerator.deps.json  AssetRipper.Processing.deps.json  AssetRipper.SerializationLogic.deps.json  AssetRipper.SmartEnums.deps.json  AssetRipper.SourceGenerated.Extensions.deps.json  AssetRipper.Web.deps.json  AssetRipper.Yaml.deps.json  Smolv.deps.json  SpirV.deps.json  createdump
src-tauri/binaries/asset-ripper-win-x64/: AssetRipper.GUI.Free.staticwebassets.endpoints.json
src-tauri/binaries/asset-ripper/linux-x64/: AssetRipper.GUI.Free  AssetRipper.GUI.Free.staticwebassets.endpoints.json  appsettings.Development.json  bash.sh
src-tauri/binaries/asset-ripper/win-x64/: appsettings.json  bash.ps1  web.config
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: c2u.rs  file_watcher.rs  lib.rs  logger.rs  main.rs  set_app_title.rs  utils.rs
src-tauri/src/apkeep/: Cargo.toml
src-tauri/src/apkeep/src/: lib.rs
src-tauri/src/apkeep/src/download_sources/: apkpure.rs
src-tauri/src/unity/: prefab.rs
src/app/: _component.tsx  layout.tsx  loading.tsx  not-found.tsx  page.tsx
src/app/(toolkit)/: layout.tsx
src/app/(toolkit)/convert/: page.tsx
src/app/(toolkit)/install/: page.tsx
src/app/about/: page.tsx
src/app/editor/: default.tsx  layout.tsx  page.tsx
src/app/editor/@left_panel/: default.tsx
src/app/editor/@right_panel/: default.tsx
src/app/editor/explorer/: page.tsx
src/app/editor/heroes/: page.tsx
src/components/: menubar.tsx  providers.tsx  titleAppProvider.tsx  tree-view.tsx
src/components/editor/: icon.tsx  index.tsx  setting.tsx  tab.tsx
src/components/providers/: i18n-provider.tsx
src/components/ui/: badge.tsx  button.tsx  dropdown-menu.tsx  form.tsx  menubar.tsx  progress.tsx  spinner.tsx  tabs.tsx  zoomable-image.tsx
src/hooks/: useFileExplorer.ts  useHeroes.ts  useTranslation.ts
src/lib/: selectSavePath.ts
src/store/app/: history.ts  setting.ts
src/store/fileExplorer/: store.ts
src/store/project/: selectedNode.ts  store.ts
src/styles/: globals.css
src/types/: json.d.ts  tauri.ts
src/types/unity/: prefab.ts
src/utils/: consts.ts  logger.ts
(+14 files in other folders)
