[package]
name = "kgc-toolkit"
version = "0.0.2"
description = "King God Castle Toolkit"
authors = ["nowl-it"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kgc_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tokio = { version = "1.47.1", features = ["process", "time"] }
zip = { version = "6.0.0", default-features = false, features = ["deflate"] }
image = { version = "0.25", features = ["png"] }
rlimit = "0.10.2"
notify = "8.2.0"
tauri-plugin-shell = "2.3.1"
dirs = "6.0"
tauri-plugin-store = "2"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
