[package]
name = "kgc-toolkit"
version = "0.0.3"
description = "King God Castle Toolkit"
authors = ["nowl-it"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "kgc_toolkit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = ["devtools"] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
chrono = { version = "0.4", features = ["serde"] }
regex = "1"
tokio = { version = "1.48", features = ["fs", "process", "time"] }
zip = { version = "6.0", default-features = false, features = ["deflate"] }
image = { version = "0.25", default-features = false, features = ["png"] }
rlimit = "0.10"
notify = "8.2"
tauri-plugin-shell = "2.3"
dirs = "6.0"
tauri-plugin-store = "2"
base64 = "0.22"
unity-yaml-rust = "0.1"
glob = "0.3"
thiserror = "2.0"

[features]
# by default Tauri runs in production mode with optimizations
default = ["custom-protocol"]
# this feature is used for production builds
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

# Profile optimizations
[profile.release]
opt-level = "z"   # Optimize for size
lto = true        # Enable Link Time Optimization
codegen-units = 1 # Better optimization but slower compile
strip = true      # Strip symbols
panic = "abort"   # Reduce binary size

[profile.dev]
opt-level = 1 # Some optimization in dev for better performance

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
